improve English translation for quests

--- a/kubejs/assets/modpack/lang/en_us.json
+++ b/kubejs/assets/modpack/lang/en_us.json
@@ -47,7 +47,7 @@
   "quests.id9.desc": "In order to get to the Nether, you need Obsidian. To get Obsidian you need Blaze Powder. And last, but not least: For Blazes you need Fel Pumpkins und Iron Bars. Pretty cumbersome if you ask me...",
   "quests.id10.desc": "Runes are the key to a whole lot of resources, flowers and more. Note that for some items you have to go to the Nether and get some stuff from there.",
   "quests.id11.desc": "A plate with the power to combine three items to a mighty Terrasteel Ingot. Use it and you'll get access to a really pink world \\(^.^)/",
-  "quests.id12.desc": "The Nether is a dark place. Ok, it's a red place. And with a really crazy texture pack the nether might even be blue. Anyway, you need stuff from the Nether (again). Blaze Powder might do it... But you need Blaze §lRods§r. Oh and make those huge white cubes cry. You'll need that eventually.",
+  "quests.id12.desc": "The Nether is a dark place. Ok, mainly it's a red place. And with a really crazy texture pack the nether might even be blue. Anyway, you need stuff from the Nether (again). Blaze Powder might do it... But you need Blaze §lRods§r. Oh and make those huge white cubes cry. You'll need that eventually.",
   "quests.id13.desc": "You can use the magic energy given to you from Mana to enchant various items. You'll only need Enchanted Books. And a Multi-block Structure of course.",
   "quests.id14.desc": "Combine a Mana Pearl, a Mana Diamond and a Manasteel Ingot and you've got yourself the most ultimate Ingot there is! With that you can craft a powerful armour. And this ingot is also used to craft the Portal to Alfheim. Aaaand for Gaia, but this is not the right time to talk about that, at least for now...",
   "quests.id15.desc": "Potions can be helpful, for sure. But we're playing with Botania! Why should we make Potions from Vanilla Minecraft? Botania is a lot more... let's say ecological.",
@@ -58,7 +58,7 @@
   "_comment": "line 2",
   "quests.id20.title": "The basic Gaia",
   "quests.id21.title": "The End",
-  "quests.id22.title": "Gaia Mana Spreader",
+  "quests.id22.title": "Mana Spreader 3000!",
   "quests.id20.desc": "For this Ritual of Gaia you'll need a few things: Those pesky Gaia Pylons and a Beacon with a base.",
   "quests.id21.desc": "You know the drill: Place twelve End Portal Frames from the inside in a circle-ish formation around yourself. But be careful: Don't place them down from the outside, as you can't rearrange them again later. Again: Place them around yourself from the INSIDE and NOT from the OUTSIDE!",
   "quests.id22.desc": "Gaia Mana Spreaders are four times as quick in, well, spreading Mana as their normal counterpart. That's it basically.",
@@ -69,7 +69,7 @@
   "quests.id26.title": "Gaia 2.0",
   "quests.id27.title": "Ender Dragon",
   "quests.id23.desc": "The Wither is a very hard boss, but preparing for it is even harder. You'll have to slay a lot of Wither Skeletons. And that's only for three Skulls. Getting Soul Sand is waaay easier. That's why you'll go get the skulls and I'll give you the Soul Sand. Sounds fair, doesn't it?",
-  "quests.id24.desc": "Kill the Wither. Oh, you've already done that? Well... You just killed the Wither, one of the most devastating boss in Vanilla Minecraft. Was easy, right? Ok then, you can now sacrifice your newly obtained Nether Star for one of two items. But... for which? Both of them would be really cool.",
+  "quests.id24.desc": "Kill the Wither. Oh, you've already done that? Well... You just killed the Wither, one of the most devastating boss in Vanilla Minecraft. Was easy, right? Ok then, you can now sacrifice your newly obtained Nether Star for this brand new beacon!",
   "quests.id25.desc": "You have to sacrifice your precious Terrasteel Ingot. I'm sorry for you. But I hope for you that you can kill the Gaia first try. Otherwise you'll have to sacrifice another Ingot for every new try. And never forget: That is the easy Gaia.",
   "quests.id26.desc": "You killed the first, and easy, Gaia victoriously. Now sacrifice your all of your Essence and kill the second, much harder iteration of the Gaia. Or else your Essence will be gone. Forever.\nGood Luck! You'll need it.",
   "quests.id27.desc": "After killing the Gaia, the Ender Dragon shouldn't be a problem any more. Easy peasy. Just a little smudge in the path to eternal world domination! Muahahahaha!",
@@ -127,8 +127,8 @@
   "quests.id55.title": "Concentrationed mana storage",
   "quests.id49.desc": "Ever thought that the Spreaders are really slow? Try this one, it collects mana from each flower like a spreader but spreads it with sparks in sparkling speed.",
   "quests.id50.desc": "Elves evolve, too! They found out that combining their materials like we do for terrasteel makes a new steel - Alfsteel. They invented their own ritual setup for that. Do you think you can craft Alfsteel, too?",
-  "quests.id51.desc": "Tools can be repaired by Pylons! You just need the power of the elves combined. Oh... only mana-usable items can be repaired. All other tools are no real tools, so we don't care!",
-  "quests.id52.desc": "Do you wanna marry me? Oh, wrong person, sorry! These rings are not meant for you. If you want them, craft them. It's worth it!",
+  "quests.id51.desc": "Tools can be repaired by Pylons! You just need the power of the elves combined. Oh... only mana-usable items or enchanted items with mending can be repaired. All other tools are no real tools, so we don't care!",
+  "quests.id52.desc": "Do you wanna marry me? ❤ Oh, wrong person, sorry! These rings are not meant for you. If you want them, craft them. It's worth it!",
   "quests.id53.desc": "Right, a bit easier automation. Could be nice to have, just try it!",
   "quests.id54.desc": "Little market for small trades with tiny elves. Just keep your bread in your inventory.",
   "quests.id55.desc": "It stores mana up to 10x a mana pools capacity! If you want a big storage on a small area, try this one!"
