change defeating wither quest to choice reward

--- a/kubejs/assets/modpack/lang/de_de.json
+++ b/kubejs/assets/modpack/lang/de_de.json
@@ -69,7 +69,7 @@
   "quests.id26.title": "Gaia 2.0",
   "quests.id27.title": "Enderdrache",
   "quests.id23.desc": "Der Wither ist ein starker Gegner, aber die Vorbereitung ist viel schwieriger. Du musst so viele Witherskelette töten. Und das nur für 3 Schädel. Seelensand besorgen ist viel einfacher. Du besorgst die Schädel und ich gebe dir den Seelensand, ok?",
-  "quests.id24.desc": "Töte den Wither. Oh, du bist schon fertig?\nDann... Du hast soeben den Wither getötet. Den Boss der Bosse in Vanilla Minecraft. War's einfach? Ok, dann kannst du nun deinen Netherstern für dieses brandneue Leuchtfeuer opfern!",
+  "quests.id24.desc": "Töte den Wither. Oh, du bist schon fertig?\nDann... Du hast soeben den Wither getötet. Den Boss der Bosse in Vanilla Minecraft. War's einfach? Ok, dann kannst du nun deinen Netherstern opfern. Aber... für welches Item? Beide wären echt cool zu besitzen.",
   "quests.id25.desc": "Du musst deinen teuren Terrastahlbarren opfern. Mein Beileid. Aber ich hoffe, du kannst den Gaia im ersten Versuch töten. Für jeden weiteren Versuch musst du einen neuen Barren ausgeben. Und vergiss niemals: das ist erst der Einfache.",
   "quests.id26.desc": "Der einfache Gaia ist besiegt. Versuche den Schwierigeren. Opfere deine wertvolle Essenz und töte ihn. Oder sie. Oder deine Essenz ist für immer weg...\nViel Glück! Du wirst es brauchen.",
   "quests.id27.desc": "Wenn du den Gaia getötet hast, ist der Enderdrachen kein Problem mehr für dich. Eine Leichtigkeit. Ein kleiner Stein auf deinem Weg zur Weltherrschaft. Muahahahaha!",
