--- a/kubejs/assets/modpack/lang/en_us.json
+++ b/kubejs/assets/modpack/lang/en_us.json
@@ -69,7 +69,7 @@
   "quests.id26.title": "Gaia 2.0",
   "quests.id27.title": "Ender Dragon",
   "quests.id23.desc": "The Wither is a very hard boss, but preparing for it is even harder. You'll have to slay a lot of Wither Skeletons. And that's only for three Skulls. Getting Soul Sand is waaay easier. That's why you'll go get the skulls and I'll give you the Soul Sand. Sounds fair, doesn't it?",
-  "quests.id24.desc": "Kill the Wither. Oh, you've already done that? Well... You just killed the Wither, one of the most devastating boss in Vanilla Minecraft. Was easy, right? Ok then, you can now sacrifice your newly obtained Nether Star for this brand new beacon!",
+  "quests.id24.desc": "Kill the Wither. Oh, you've already done that? Well... You just killed the Wither, one of the most devastating boss in Vanilla Minecraft. Was easy, right? Ok then, you can now sacrifice your newly obtained Nether Star for one of two items. But... for which? Both of them would be really cool.",
   "quests.id25.desc": "You have to sacrifice your precious Terrasteel Ingot. I'm sorry for you. But I hope for you that you can kill the Gaia first try. Otherwise you'll have to sacrifice another Ingot for every new try. And never forget: That is the easy Gaia.",
   "quests.id26.desc": "You killed the first, and easy, Gaia victoriously. Now sacrifice your all of your Essence and kill the second, much harder iteration of the Gaia. Or else your Essence will be gone. Forever.\nGood Luck! You'll need it.",
   "quests.id27.desc": "After killing the Gaia, the Ender Dragon shouldn't be a problem any more. Easy peasy. Just a little smudge in the path to eternal world domination! Muahahahaha!",
