--- a/kubejs/assets/modpack/lang/de_de.json
+++ b/kubejs/assets/modpack/lang/de_de.json
@@ -13,6 +13,7 @@
   "quests.line4.desc": "Botania fügt viele neue Pflanzen hinzu. Viele helfen dir, Sachen und Dinge leichter zu machen. Schauen wir uns mal die Nützlichsten an.",
   "quests.line5.desc": "Hier ist eine Sammlung der Quests, die du tun kannst, wenn du eigentlich afk in der Welt wärst. Dann hast du Spaß in Minecraft und musst keine andere Aktivität finden.",
   "quests.line6.desc": "Botania ist eine beeindruckende Mod und viele Nutzer erstellen Erweiterungen dafür. Ein paar wurden hier hinzugefügt. Finde etwas mehr über sie heraus!",
+
   "_comment": "line 0",
   "quests.id0.title": "Mein erster Bruchstein",
   "quests.id1.title": "Alt? Antik und wertvoll!",
@@ -30,6 +31,7 @@
   "quests.id5.desc": "Es wird Nacht. Es wird unangenehm. Monster spawnen um dir herum. Es wäre vielleicht besser, wenn du dir eine Monsterfalle baust.",
   "quests.id6.desc": "Minecraft ohne Erze? Nein! Die Erzblüte hilft dir. Setze einfach Stein in ihre Nähe, gib ihr Mana und sie wird dich beglücken.",
   "quests.id7.desc": "Um im Leben voran zu kommen, brauchst du Ausrüstung. Am besten benutzt du §1Manastahl§r Rüstung und Werkzeuge. Die verbrauchen Mana statt Haltbarkeit! Ein Item, welches Mana speichern kann, muss im Inventar vorhanden sein, um Mana verwenden zu können.",
+
   "_comment": "line 1",
   "quests.id8.title": "Manatablett",
   "quests.id9.title": "Lohen erstellen",
@@ -43,6 +45,7 @@
   "quests.id17.title": "Handel mit Elfen",
   "quests.id18.title": "Elementiumausrüstung",
   "quests.id19.title": "Mama, ich kann fliegen!",
+  "quests.id56.title": "Unendlich Wasser",
   "quests.id8.desc": "Mana in einem Pool? Das kann jeder. Aber ein Manatablett? Das hat nicht jeder! Jedoch kann man sich Rüstung und Werkzeuge bauen, die sich durch Mana reparieren lassen! Dafür brauchst du dieses Tablett! Aber Achtung: Wenn kein Mana mehr im Tablett ist, gehen deine Sachen kaputt.",
   "quests.id9.desc": "Um in den Nether zu kommen, brauchst du Obsidian. Für Obsidian brauchst du Lohenstaub. Für Lohen brauchst du Fel Pumpkins und Eisengitter.",
   "quests.id10.desc": "Runen sind der Schlüssel zu vielen Ressourcen, Blumen und mehr. Beachte, dass du für manche Sachen in den Nether musst und Sachen von dort brauchst.",
@@ -55,6 +58,8 @@
   "quests.id17.desc": "Die Elfen sind nett zu uns. Sie handeln mit uns und geben uns für unser blaues Zeug pinkes Zeug zurück. Leider verbraucht der Tausch eine kleine Menge Mana.",
   "quests.id18.desc": "Du hast zwar schon §1blaue Rüstung§r, aber jeder weiß: pink ist geiler! Mach dir deine §5pinke Ausrüstung§r jetzt und bekomme ein pinkes AIOT geschenkt! (Nur solange der Vorrat reicht)",
   "quests.id19.desc": "Du möchtest besser sein als all die Leute da draußen. Du möchtest in die Lüfte steigen und davon fliegen! Lass deine Träume keine Träume bleiben! Tu es einfach!",
+  "quests.id56.desc": "Du möchtest unendlich viel Wasser? Versuche es mit diesem Stab. Mit ihm kannst du Wasser platzieren. Du musst ihm nur über ein Mana Tablett oder einen Ring genug Mana spendieren.",
+
   "_comment": "line 2",
   "quests.id20.title": "Der einfache Gaia",
   "quests.id21.title": "Das End",
@@ -62,6 +67,7 @@
   "quests.id20.desc": "Für das Ritual des Gaia brauchst du ein paar Sachen. Diese Gaia Pylonen und ein Leuchtfeuer mit einer Basis.",
   "quests.id21.desc": "Du wirst 12 Endportalrahmen brauchen und musst sie von innen in einem Kreis aufbauen. Nicht von außen. Aber Achtung, du kannst die Blöcke nicht wieder umbauen. Nochmal: Bau sie um dich herum. Von INNEN und NICHT von AUSSEN!",
   "quests.id22.desc": "Gaia Manaverteiler sind viermal schneller als normale Manaverteiler.",
+
   "_comment": "line 3",
   "quests.id23.title": "Vorbereitung auf den Wither",
   "quests.id24.title": "Der Wither",
@@ -73,6 +79,7 @@
   "quests.id25.desc": "Du musst deinen teuren Terrastahlbarren opfern. Mein Beileid. Aber ich hoffe, du kannst den Gaia im ersten Versuch töten. Für jeden weiteren Versuch musst du einen neuen Barren ausgeben. Und vergiss niemals: das ist erst der Einfache.",
   "quests.id26.desc": "Der einfache Gaia ist besiegt. Versuche den Schwierigeren. Opfere deine wertvolle Essenz und töte ihn. Oder sie. Oder deine Essenz ist für immer weg...\nViel Glück! Du wirst es brauchen.",
   "quests.id27.desc": "Wenn du den Gaia getötet hast, ist der Enderdrachen kein Problem mehr für dich. Eine Leichtigkeit. Ein kleiner Stein auf deinem Weg zur Weltherrschaft. Muahahahaha!",
+
   "_comment": "line 4",
   "quests.id28.title": "Mampftau",
   "quests.id29.title": "Agraryophylle",
@@ -92,6 +99,7 @@
   "quests.id34.desc": "Die Rosa Arcana saugt dir deine Erfahrung aus, aber gibt dir dafür, was du am meisten brauchst: Mana. Je mehr Erfahrung, desto mehr Mana, desto weniger Erfahrung, desto weniger Mana.",
   "quests.id35.desc": "Dir gehen Creeper auf die Nerven? Sie sprengen dich immer in die Luft? Pech gehabt. Oder? Nein! Das Tigerauge hilft dir da weiter! Dank ihm sprengen sich Creeper bei dir nicht mehr in die Luft!",
   "quests.id36.desc": "Der Titel ist Programm - was soll das?! Einfach nur ein Löwenzahn?! Ja... Sorry, das findet nur der Peter Lustig.",
+
   "_comment": "line 5",
   "quests.id37.title": "Tiere",
   "quests.id38.title": "Generierende Blumen",
@@ -117,6 +125,7 @@
   "quests.id46.desc": "Tränke sind toll. Du kannst sie für alles, was du willst (und was verfügbar ist), trinken. Aber nur einmal. Was würdest du sagen, wenn ich dir erzähle, dass du diese Tränke sechsmal trinken kannst? Du weißt das? Dann tu es! Warte nicht so lange. Beim Kampf gegen den Gaia kann das wirklich nützlich sein.",
   "quests.id47.desc": "Stäbe sind nützlich. Sehr nützlich. Du kannst unendlich Erde platzieren, du kannst fliegen, du kannst überall Wasser haben! Es gibt so viele Stäbe für so viele Aufgaben. Probiere alle aus.",
   "quests.id48.desc": "Du brauchst Musik für deine Party? Vielleicht findest du ja die richtigen Lieder in dieser Sammlung. Du musst nur alle bekommen. Dann kann die Party starten. Aber trink nicht zu viel, Tränke sind teuer.",
+
   "_comment": "line 6",
   "quests.id49.title": "Ich will der allerschnellste sein",
   "quests.id50.title": "Elfen haben neue Materialien?",
